# DS210-Final-Project

finalproject/: Cargo.toml  winequality.csv
finalproject/src/: classification.rs  graph.rs  main.rs  preprocessing.rs  split_dataset.rs
