[package]
name = "finalproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = ["ndarray", "object", "dtype-struct", "mode", "describe", "lazy", "concat_str"] }
rand = "0.8"
smartcore = "0.3.2"
plotters = "0.3.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }